# BIOS

./: README.md
blang/: CMakeLists.txt  blang.cpp
blang/include/: CMakeLists.txt
blang/include/blang/Frontend/: AST.h  Lexer.h  Parser.h
blang/include/blang/mlir/: CMakeLists.txt  Dialect.h  MLIRGen.h  Ops.td  Passes.h  ShapeInferenceInterface.h
blang/lib/: CMakeLists.txt
blang/lib/AST/: AST.cpp  CMakeLists.txt
blang/lib/mlir/: BlangCombine.cpp  BlangCombine.td  CMakeLists.txt  Dialect.cpp  LowerToAffineLoops.cpp  LowerToLLVM.cpp  MLIRGen.cpp  ShapeInferencePass.cpp
blang/test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
blang/test/AST/: char_num.bs  char_num_type.bs  char_type.bs  float64_type.bs  float_type.bs  int64_type.bs  int_type.bs  string_type.bs  tensors.bs
blang/test/CodeGen/mlir/: affine-lowering.mlir  float64_type.bs  invalid.mlir  llvm-lowering.mlir  print_char.bs  print_float.bs  print_float64.bs  print_int.bs  print_int64.bs  print_string.bs  run_tensor_scalar.bs  scalar.bs  shape_inference.mlir  tensros_mlir.bs
llvm/: CMakeLists.txt
llvm/projects/: CMakeLists.txt
